Horizontally-scrollable items with a 3d transform are rendered incorrectly in RTL when container has -webkit-overflow-scroll: touch https://bugs.webkit.org/show_bug.cgi?id=157482 rdar://problem/26204794

Reviewed by Zalan Bujtas.
Source/WebCore:

The compositing code was confused about scroll offsets vs. scroll positions, because
of the badly named scrolledContentOffset(); we used that in one place, and scrollOffset()
lower down. Change both to use scrollOffset().

Test: compositing/rtl/rtl-with-transformed-descendants.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):

LayoutTests:

This can't be a ref test because on iOS ref test snapshots are doing by drawing, not by snapshotting layers.

* compositing/rtl/rtl-with-transformed-descendants-expected.txt: Added.
* compositing/rtl/rtl-with-transformed-descendants.html: Added.

Canonical link: https://commits.webkit.org/175691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200665 268f45cc-cd09-0410-ab3c-d52691b4dbfc